test/tests/errors/error-file-get-wrong-arg-count.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    get(f, bf);
}